# effective-haskell-book

chapter1/: README.md
chapter1/1-creating-new-variables/: Main.hs
chapter1/2-writing-functions/: Main.hs
chapter1/3-composing-functions/: Chapter1.hs
chapter1/4-creating-custom-operators/: OperatorExample.hs
chapter1/5-let-bindings/: Main.hs
chapter1/6-branches/: Main.hs
chapter1/7-looping/: FizzBuzz.hs
chapter1/8-exercises/: Main.hs
chapter2/0-construct-deconstruct-lists-recursively/: Main.hs
chapter2/1-transforming-lists/: Main.hs
chapter2/2-list-comprehensions/: Main.hs
chapter2/3-pattern-matching/: Main.hs
chapter2/4-infinite-lists/: Main.hs
chapter2/5-exercises/: Main.hs
chapter3/0-etaReduced-and-pointfree/: Main.hs
chapter4/0-creating-datatypes/: Main.hs
chapter4/1-records/: Main.hs
chapter4/2-sum-types/: Main.hs
chapter4/3-creating-polymorphic-types/: Main.hs
chapter4/4-creating-inductively-defined-data-structures/: Main.hs
chapter4/5-building-a-calculator/: Main.hs
chapter4/6-functions-as-values/: Main.hs
chapter4/7-type-aliases/: Main.hs
chapter5/import-demo/: CHANGELOG.md  import-demo.cabal
chapter5/import-demo/app/: Main.hs
chapter5/learn-cabal/: LICENSE  learn-cabal.cabal
chapter6/0-ad-hoc-polymorphism/: Main.hs
chapter6/1-type-class/: NaturalClass.hs  OrdExample.hs
chapter6/2-default-signatures-demo/: DefaultSignaturesDemo.hs
